2012-03-19  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-23
	* fix array argument passing
	* M bin/tcSubmitTag.py

2012-03-16  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-22
	* fix for 64b where dl module does not exist anymore
	* M bin/vmem-sz.py

2012-03-09  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-21
	* fix bug #89205: catch exception during diff-root
	* remember there were a problem during the dump
	* M python/scripts/diff_root_files.py
	* M python/RootUtils.py

2012-03-06  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-20
	* more protections + improved d3pd-reader-object generator
	* M bin/atl-gen-athena-d3pd-reader

2012-03-02  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-19
	* removed old and non used anymore json import
	* M python/RootUtils.py

2012-02-24  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-18
	* infer the runtime from the AtlasProject env. variable
	* M python/WorkAreaLib.py
	* M bin/setupWorkArea.py

2012-01-18  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-17
	* fix bug 89984: load dict for AttributeListLayout from APR then
	  fallback on the POOL location.
	* M python/AthFile/impl.py

2011-12-16  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-16
	* fix bug 89667: c++ impl. for DsoDb and dont screw up tpcnv
	  generation. ie: load the reflex dict for reflex.
	* M python/Dso.py

2011-12-15  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-15
	* fix bug 89667: c++ impl. for DsoDb
	* M python/Dso.py
	* M bin/checkPlugins.py

2011-12-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-14
	* improve CLI of atl-gen-athena-d3pd-reader
	* M bin/atl-gen-athena-d3pd-reader

2011-12-12  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-13
	* fix avn-tag
	* M bin/avn.py

	* tagging PyUtils-00-11-12